# quantum-chemistry

./: README.md  package.json  pyproject.toml
.github/workflows/: auto_update.yml  ci.yml  deploy.yml
docs/: limitless-drive.md  mvp.md  voice-interface.md
live/: exploration-cache.json  index.html
live/assets/: app.js  styles.css
scripts/: auto_update.sh  build.mjs  test.mjs  validate-cache.mjs
src/limitless_drive/: __init__.py  indexer.py
src/voice_interface/: __init__.py  cli.py  config.py
src/voice_interface/asr/: __init__.py  base.py  nemotron.py
src/voice_interface/audio/: __init__.py  vad.py
src/voice_interface/conversation/: __init__.py  loop.py
src/voice_interface/gui/: __init__.py
src/voice_interface/plugins/: __init__.py  registry.py
src/voice_interface/tts/: __init__.py  base.py  piper.py
tests/: test_indexer.py  test_voice_interface.py
