[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-drive"
version = "0.1.0"
description = "Content-addressed preservation index prototype for IPFS/IPNS-backed personal archives."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
limitless-index = "limitless_drive.indexer:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
